Fixed flickering on transition to game result.

--- a/app/stylesheets/_game-view.scss
+++ b/app/stylesheets/_game-view.scss
@@ -4,9 +4,10 @@
   height: 400%;
   background: image-url("purty_wood.png") repeat;
   border: 1px solid #f00;
-  @include transition(-webkit-transform 1s ease-in-out);
+  @include transition(-webkit-transform .5s ease-in-out);
   @include transform-origin(50%, 100%);
   @include transform(translate(-35%, -35%) rotate(0deg));
+  -webkit-backface-visibility: hidden;
 }
 .game-view_result {
   @include transform(translate(-35%, -35%) rotate(-30deg));
